--- a/tribestream-api-registry-webapp/src/main/static/package.json
+++ b/tribestream-api-registry-webapp/src/main/static/package.json
@@ -15,33 +15,33 @@
     "url" : "https://github.com/tomitribe/tribestream-api-registry.git"
   },
   "dependencies": {
-    "angular": "^1.5.8",
-    "angular-cookies": "^1.5.8",
-    "angular-resource": "^1.5.8",
-    "angular-route": "^1.5.8",
-    "ngstorage": "^0.3.11"
+    "angular": "1.5.8",
+    "angular-cookies": "1.5.8",
+    "angular-resource": "1.5.8",
+    "angular-route": "1.5.8",
+    "ngstorage": "0.3.11"
   },
   "devDependencies": {
     "bower": "1.7.9",
-    "awesome-typescript-loader": "^2.2.4",
-    "css-loader": "^0.23.1",
+    "awesome-typescript-loader": "2.2.4",
+    "css-loader": "0.23.1",
     "url-loader": "0.5.7",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.8.5",
-    "html-loader": "^0.4.3",
-    "html-webpack-plugin": "^2.15.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.2.0",
-    "karma-jasmine": "^1.0.2",
-    "karma-phantomjs-launcher": "^1.0.2",
+    "extract-text-webpack-plugin": "1.0.1",
+    "file-loader": "0.8.5",
+    "html-loader": "0.4.3",
+    "html-webpack-plugin": "2.15.0",
+    "jasmine-core": "2.4.1",
+    "karma": "1.2.0",
+    "karma-jasmine": "1.0.2",
+    "karma-phantomjs-launcher": "1.0.2",
     "karma-chrome-launcher": "2.0.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.8.0",
-    "null-loader": "^0.1.1",
-    "phantomjs-prebuilt": "^2.1.7",
-    "raw-loader": "^0.5.1",
-    "rimraf": "^2.5.2",
-    "style-loader": "^0.13.1",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
+    "null-loader": "0.1.1",
+    "phantomjs-prebuilt": "2.1.7",
+    "raw-loader": "0.5.1",
+    "rimraf": "2.5.2",
+    "style-loader": "0.13.1",
     "node-sass": "3.10.0",
     "pug-html-loader": "1.0.8",
     "sass-loader": "4.0.2",
@@ -49,11 +49,11 @@
     "precss": "1.4.0",
     "autoprefixer": "6.4.1",
     "pug": "2.0.0-beta6",
-    "typescript": "^2.0.2",
-    "typings": "^1.3.2",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-merge": "^0.14.0",
+    "typescript": "2.0.2",
+    "typings": "1.3.2",
+    "webpack": "1.13.0",
+    "webpack-dev-server": "1.14.1",
+    "webpack-merge": "0.14.0",
     "webpack-encoding-plugin": "0.2.0",
     "to-string-loader": "1.1.5",
     "tslint-loader": "2.1.5",
