--- a/tribestream-api-registry-webapp/src/main/static/package.json
+++ b/tribestream-api-registry-webapp/src/main/static/package.json
@@ -22,6 +22,7 @@
     "ngstorage": "0.3.11"
   },
   "devDependencies": {
+    "tough-cookie": "2.3.2",
     "bower": "1.7.9",
     "awesome-typescript-loader": "2.2.4",
     "css-loader": "0.23.1",
