--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
 
   <groupId>org.tomitribe.tribestream</groupId>
   <artifactId>tribestream-api-registry-parent</artifactId>
-  <version>0.5.4-SNAPSHOT</version>
+  <version>0.5.4</version>
   <packaging>pom</packaging>
 
   <name>Tribestream API Registry :: Parent</name>
@@ -38,7 +38,7 @@
     <connection>scm:git:git@github.com:tomitribe/tribestream-api-registry.git</connection>
     <url>scm:git:git@github.com:tomitribe/tribestream-api-registry.git</url>
     <developerConnection>scm:git:git@github.com:tomitribe/tribestream-api-registry.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>tribestream-api-registry-parent-0.5.4</tag>
   </scm>
 
   <prerequisites>
