--- a/tribestream-api-registry-webapp/pom.xml
+++ b/tribestream-api-registry-webapp/pom.xml
@@ -23,7 +23,7 @@
   <parent>
     <groupId>org.tomitribe.tribestream</groupId>
     <artifactId>tribestream-api-registry-parent</artifactId>
-    <version>0.5.6</version>
+    <version>0.5.7-SNAPSHOT</version>
   </parent>
 
   <artifactId>tribestream-api-registry-webapp</artifactId>
